--- a/index.html
+++ b/index.html
@@ -47,9 +47,11 @@ permalink: /
 
 {% for section in site.data.landing %}
 {% assign loopindex = forloop.index | modulo: 2 %}
+<!--{% if section.tpl %} -->
 <section id="{{ section.id }}" class="features {% if loopindex != 1 %} gray-section {% endif %} {{ section.css }}" style="margin-top: 0;">
   {% include sections/{{section.tpl}} %}
 </section>
+<!--{% endif %} -->
 {% endfor %}
 <style>
 iframe {
